fix center alignment

--- a/client/assets/styles/scss/components/stream.scss
+++ b/client/assets/styles/scss/components/stream.scss
@@ -224,10 +224,10 @@
   }
 
   .iconnables {
-    height: 24px;
+    display: flex;
+    height: 54px;
     pointer-events: none;
     position: relative;
-      top: 5px;
     width: 24px;
   }
 
